@@ -1,3 +1,7 @@
+2023-12-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/api.cpp (type2name): Recognise OBJSXP added in R 4.4.0
+
 2023-11-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/tinytest/testRcppInterfaceExporter/R/RcppExports.R: Regenerated
